--- a/src/MarysToyStore/appsettings.Production.json
+++ b/src/MarysToyStore/appsettings.Production.json
@@ -10,5 +10,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:marystoystore1.database.windows.net,1433;Initial Catalog=MarysToyStore;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
