--- a/src/MarysToyStore/appsettings.Development.json
+++ b/src/MarysToyStore/appsettings.Development.json
@@ -13,6 +13,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:marystoystore1.database.windows.net,1433;Initial Catalog=MarysToyStore;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:marystoystore1.database.windows.net,1433;Initial Catalog=MarysToyStore;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnectionProd": "Server=tcp:marystoystore-prod.database.windows.net,1433;Initial Catalog=MarysToyStore-Prod;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
