--- a/src/MarysToyStore/appsettings.Production.json
+++ b/src/MarysToyStore/appsettings.Production.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "AppConfig": {
+    "AppName": "Mary's Toy Store"
+  },
+
   "AllowedHosts": "*"
 }
