--- a/src/MarysToyStore/appsettings.Development.json
+++ b/src/MarysToyStore/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "AppConfig": {
+    "AppName": "Mary's Toy Store"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,10 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
 
-  "AppConfig": {
-    "AppName": "Mary's Toy Store"
-  },
-
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:marystoystore1.database.windows.net,1433;Initial Catalog=MarysToyStore;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnectionProd": "Server=tcp:marystoystore-prod.database.windows.net,1433;Initial Catalog=MarysToyStore-Prod;Persist Security Info=False;User ID=khuber;Password=Kitkatbaby23!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
