--- a/src/MarysToyStore/appsettings.Development.json
+++ b/src/MarysToyStore/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AppConfig": {
-    "AppName": "Mary's Toy Store"
+    "AppName": "Mary's Toy Store",
+    "TaxRate": 0.05
   },
 
   "Logging": {
