--- a/src/MarysToyStore/appsettings.Production.json
+++ b/src/MarysToyStore/appsettings.Production.json
@@ -3,6 +3,8 @@
     "AppName": "Mary's Toy Store",
     "TaxRate": 0.05
   },
+  "UspsToken": "7NORTH1I44825",
+  "UspsAddressVerificationUrl": "https://secure.shippingapis.com/ShippingAPI.dll?API=verify&XML=",
 
   "Logging": {
     "LogLevel": {
