--- a/src/MarysToyStore/appsettings.Development.json
+++ b/src/MarysToyStore/appsettings.Development.json
@@ -6,13 +6,26 @@
   "UspsToken": "7NORTH1I44825",
   "UspsAddressVerificationUrl": "https://secure.shippingapis.com/ShippingAPI.dll?API=verify&XML=",
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "MinimumLevel": "Verbose",
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp} [{Level:u3} {RequestId}] {Message} {Exception}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/MarysToyStore.txt",
+          "outputTemplate": "{Timestamp} [{Level:u3} {RequestId}] {Message} {Exception}{NewLine}"
+        }
+      }
+    ]
   },
+
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
