--- a/src/MarysToyStore/appsettings.Production.json
+++ b/src/MarysToyStore/appsettings.Production.json
@@ -6,13 +6,31 @@
   "UspsToken": "7NORTH1I44825",
   "UspsAddressVerificationUrl": "https://secure.shippingapis.com/ShippingAPI.dll?API=verify&XML=",
 
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "outputTemplate": "{Timestamp} [{Level:u3} {RequestId}] {Message} {Exception}{NewLine}"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/MarysToyStore.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 31,
+          "outputTemplate": "{Timestamp} [{Level:u3} {RequestId}] {Message} {Exception}{NewLine}"
+        }
+      }
+    ]
   },
+
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
